# open-swe

./: .gitignore  CUSTOMIZATION.md  Dockerfile  INSTALLATION.md  pyproject.toml
.github/workflows/: ci.yml
agent/: prompt.py  server.py  webapp.py
agent/integrations/: daytona.py  langsmith.py
agent/middleware/: __init__.py  open_pr.py  resolve_repo.py
agent/tools/: __init__.py  changie_new.py  commit_and_open_pr.py  fibery_comment.py  fibery_create_entity.py  fibery_lookup.py  fibery_state.py  fibery_update_description.py  fibery_update_field.py  github_review.py  read_pr_comments.py
agent/utils/: auth.py  fibery.py  github.py  github_comments.py  github_user_email_map.py  langsmith.py  repo.py  slack.py
docs/brainstorms/: 2026-03-18-fibery-integration-brainstorm.md  2026-03-25-automated-spec-fleshing-brainstorm.md  2026-03-25-fibery-requirements-fleshing-brainstorm.md
docs/plans/: 2026-03-19-feat-fibery-integration-plan.md  2026-03-25-feat-automated-backlog-spec-fleshing-plan.md  2026-03-25-feat-fibery-requirements-fleshing-plan.md
tests/: test_fibery.py  test_github_security.py  test_repo_extraction.py  test_slack_context.py
